# linkedin-agentic-bot

./: README.md  main.py  pyproject.toml
src/linkedin_agentic_bot/: settings.py
src/linkedin_agentic_bot/core/: prompts.py
src/linkedin_agentic_bot/graph/: nodes.py  state.py  workflow.py
src/linkedin_agentic_bot/graph/utils/: chains.py  helpers.py
