[project]
name = "linkedin-agentic-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Brenno Natal",email = "natalbrenno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "linkedin_agentic_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
